Fixed bug #39782 (setTime() on a DateTime constructed with a Weekday yields incorrect results).